--- a/style.css
+++ b/style.css
@@ -35,12 +35,20 @@ h1{
     border: 15px solid rgb(151, 46, 177);
     padding: 50px;
     margin: auto;
+    text-decoration: overline;
+    text-emphasis: center;
+    max-width: 5%;
+    max-height: 100px;
 }
 h2{
     color: rgb(11, 11, 48);
     background-color: rgb(112, 145, 165);
     border-style: inset;
     position: relative;
+    text-decoration: underline overline;
+    text-align: justify;
+    font-family: 'Potta One', cursive;
+
 }
 
 h3{
@@ -52,6 +60,8 @@ h3{
 footer{ 
     background-color: hsla(350, 50, 50, 0.5);
     position: absolute;
+    text-align: left;
+    display: none;
 }
 
 nav{
@@ -61,8 +71,8 @@ nav{
     border-style: double;
     border-color: lightpink;
     border-radius: 25px;
-    position: absolute;
-    height: 100px;
+    position: fixed;
+    height: 4pc;
     width: 400px;
 
 }
@@ -71,40 +81,49 @@ p{
     color: #BF1FFA; 
     background-color: gold;
     position: relative;
+    display: inline-block;
+    font-size: 2em;
+
 }
 
 
 li{
-    color: grey; /* Absolute */
+    color: grey; 
     background-color: powderblue;
-    position: relative
+    position: relative;
+    font-size: 3ex;
+
 }
 
 ol{
     color: teal;
     background-color: lightblue;
-    position: relative;
+    position:static;
 }
 
 b{
     color: blueviolet;
+    font-size: 2vw;
 }
 
 table{
     background-color: bisque;
     /*Box model */
     width:300px;
-    border: 15px solid green;
+    border: 15pt solid green;
     padding-top: 50px;
-    padding-bottom: 30px;
+    padding-bottom: 30pt;
     padding-right: 25px;
     padding-left: 20px;
     margin: 20px 30px 30px 200px;
+    font-family: 'Lobster', cursive;
+    max-width: 50%;
+    max-height: 100px;
+    
 
 }
 
 body{
     background-color: paleturquoise;
-    position: relative;
 }
 
